# UFPB

./: .Rhistory  .gitattributes  pyproject.toml
aprendizagem_maquina/: atividade_arvores_gabrielpereira.qmd  testa_base.html  testa_base.qmd  testa_base.rmarkdown
biometria/: atividade1.qmd
demografia/includes/: bib.bib
demografia/primeiro_bloco/: ibge_cnv_poprj17092745_227_107_69.csv  mortalidade.csv  mortalidade_rj.csv  natalidade.csv  natalidade_rj.csv  projecoes_pop_rj.xls  pyproject.toml  relatorio1_gabrielpereira.qmd  relatorio1_gabrielpereira.tex  resumo1_gabrielpereira.qmd  resumo1_gabrielpereira.tex
demografia/primeiro_bloco/includes/: bib.bib
demografia/segundo_bloco/: 2000_faixa_etaria_homem.csv  2000_faixa_etaria_mulher.csv  2000_homens_urbana_rural.csv  2000_mulheres_urbana_rural.csv  2010_faixa_etaria_homem.csv  2010_faixa_etaria_mulher.csv  2010_homens_urbanos_rural.csv  (+16 more)
estagio2/: relatorio_estagio2_gabriel_pereira.loa  relatorio_estagio2_gabriel_pereira.qmd  relatorio_estagio2_gabriel_pereira.tex
experimento/: atividade1.html  atividade1.qmd  atividade1_gabriel_pereira.qmd  pyproject.toml
experimento/atividade2/: atividade2_gabriel_pereira.qmd
multi/: avaliacao2_gabriel_pereira.html  avaliacao2_gabriel_pereira.qmd  explora_multi.html  explora_multi.qmd  explora_multi.rmarkdown  style.scss  trabalho2_gabriel_pereira.html  trabalho2_gabriel_pereira.qmd  trabalho2_gabriel_pereira.rmarkdown
nao_p/: avaliacao2_gabriel_pereira.qmd  nao_p.aux  nao_p.tex
pesquisa operacional/: exercicios.py
pesquisa_operacional/: exercicios_po.ipynb  prova1_gabrielpereira.qmd  prova2_gabrielpereira.ipynb  relatoriofinal_gabriel_pereira.qmd
python/: approximate_pi  assunto.txt  avaliacao2_gabrielpereira.py  pi.cpp  py_nump.py  python.py
reg2/: avaliacao2_gabriel_pereira.qmd  comb.txt  heartdis.txt  ultima_aula.R
series/: STP-20240315211523961.csv  WMT_2006-01-01_to_2018-01-01.xlsx  apresentação3-corr.qmd  apresentação3.html  apresentação3.qmd  drinks.csv  ipeadata[15-03-2024-10-53].csv  series.R  series.qmd  trabalho3_series.qmd  us-retail-sales.csv
sobrevivencia/: exercicios1.r  pyproject.toml
sobrevivencia/primeira_avaliacao/: relatorio1_gabrielpereira.qmd
sobrevivencia/primeira_avaliacao/includes/: bib.bib
sobrevivencia/segunda_avaliacao/: relatorio2_gabrielpereira.qmd
sobrevivencia/segunda_avaliacao/includes/: adesao.txt  dialcompete.txt  multdiarreia.txt
(+427 files in other folders)
