[project]
name = "ufpb"
version = "0.1.0"
description = ""
authors = [
    {name = "cowvin0",email = "gabrielpereira00PereiraGabriel@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

