[tool.poetry]
name = "sobrevivencia"
version = "0.1.0"
description = ""
authors = ["cowvin0 <gabrielpereira00PereiraGabriel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lifelines = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
