[tool.poetry]
name = "primeiro-bloco"
version = "0.1.0"
description = ""
authors = ["cowvin0 <gabrielpereira00PereiraGabriel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
